Fixed Firefox layout issues

--- a/styles/nav-holds.less
+++ b/styles/nav-holds.less
@@ -1,6 +1,7 @@
 .yr-nav-holds {
     min-height: 100%;
-    
+    min-height: 100vh;
+
     &,
     .yr-nav-holds-main {
         position: relative;
