--- a/styles/site.less
+++ b/styles/site.less
@@ -23,6 +23,7 @@ body,
     justify-content: flex-start;
     align-items: stretch;
     min-height: 100%;
+    min-height: 100vh;
 }
 
 body {
